@@ -30,7 +30,11 @@
 
 namespace LinuxSampler {
 
+#if __cplusplus >= 201103L
+    typedef std::unique_ptr<std::vector<std::string>> FileListPtr;
+#else
     typedef std::auto_ptr<std::vector<std::string> > FileListPtr;
+#endif
 
     class File {
         public:
